--- a/styles/index.css
+++ b/styles/index.css
@@ -8,7 +8,7 @@
   font-family: "Poppins", sans-serif;
 }
 body{
-  background-color: rgb(237 157 154);
+  background-color: #F2AE72;
 
 }
 /* default */
@@ -41,16 +41,18 @@ body{
   font-weight: 900;
   color: #944c52;
 }
-.nav__items {
+.nav__items--first {
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-end;
   align-items: center;
 }
-.nav__items button{
-    background: #eec1c1;
-    border: none;
-    /* border-radius: 12px */
+.nav__items--first button{
+  background: #588C73;
+  border: none;
+  /* border-radius: 12px; */
+  color: white;
+  font-size: 16px;
 }
 .nav .nav__item {
   display: flex;
@@ -64,8 +66,8 @@ body{
   margin-left: 5px;
  
 }
-.fas {
-  color: #944c52;
+.fa-music, .fa-cog, .fa-id-badge, .fa-sign-out-alt{
+  color: #f7f2f3;
 }
 
 /* Body */
@@ -93,7 +95,7 @@ body{
   height: 300px;
   width: 300px;
   border-radius: 50%;
-  border: 5px solid white;
+  border: 5px solid #be3636;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -135,7 +137,7 @@ body{
   display: flex;
   flex-flow: column;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: #588C73;
   border-radius: 8px;
   padding: 20px;
   position: relative;
@@ -206,7 +208,7 @@ body{
 .filters {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     height: 100%;
     align-items: center;
 }
@@ -246,8 +248,9 @@ body{
   background-color: rgb(239, 239, 239);
   border: 1px solid rgb(206, 205, 205);
   border-radius: 8px;
-  padding: 10px 0;
+  padding: 10px;
   width: 100%;
+  margin-top: 10px;
 }
 /* task modal */
 .task__modal {
@@ -393,6 +396,7 @@ body{
     flex-flow: row-reverse;
     align-items: center;
     justify-content: space-around;
+    margin: 0 2rem;
 }
 
 .tasklist__box {
@@ -409,7 +413,7 @@ body{
   justify-content: space-between;
   align-items: center;
   padding: 20px 15px;
-  border-bottom: 3px solid white;
+  border-bottom:3px solid #3a6a53;
   position: relative;
 }
 .header .btn-option {
@@ -425,7 +429,7 @@ body{
 .tasklist__box .header .name {
   font-weight: bold;
   font-size: 20px;
-  color: white;
+  color: #812f27;
 }
 .tasklist__box .tasks {
     width: 100%;
@@ -440,7 +444,7 @@ body{
     flex-flow: column;
     margin-top: 10px;
     /* overflow-y: scroll; */
-    height: 50vh;
+    /* min-height: 45vh; */
     overflow: hidden;
 
 }
@@ -472,14 +476,14 @@ body{
 }
 
 .tasklist .btn-all-option {
-  border: 1px solid white;
+  border: 1px solid rgb(94, 20, 20);
   height: 30px;
   width: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 4px;
-  color: white;
+  color: #6e1e1e;
   cursor: pointer;
 }
 .tasklist .btn-all-option:hover {
@@ -555,6 +559,9 @@ body{
   font-size: 25px;
   cursor: pointer;
 }
+.fa-check-circle {
+  color: #3a6a53;
+}
 .task .btn-check:hover {
   opacity: 0.8;
 }
@@ -564,14 +571,14 @@ body{
   flex-flow: row;
   justify-content: center;
   align-items: center;
-  border: 2px dashed rgba(255, 255, 255, 0.404);
+  border: 2px dashed rgb(241, 239, 239);
   margin-top: 16px;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgb(217, 85, 80);
   border-radius: 8px;
   padding: 10px 15px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
   transition: all 0.1s ease-in;
-  color: rgba(255, 255, 255, 0.6);
+  color: white;
   cursor: pointer;
   font-weight: bold;
 }
@@ -585,16 +592,19 @@ body{
   padding: 0 10px;
 }
  /* style calendar  */
+ .calendar{
+   margin-bottom: 30px;
+ }
 .calendar input {
   display: none;
 }
 .flatpickr-calendar.inline {
-  background: rgb(219, 158, 158);
+  background: #c0594f;
   color: #fefefe;
   width: 400px;
 }
 .flatpickr-day.today{
-  border: 1px solid #92353d;
+  border: 2px solid #ebc6c9;
 }
 .flatpickr-day {
   color: #fefefe;
@@ -603,8 +613,12 @@ body{
   width: 100%;
   display: block;
 }
-.flatpickr-weekday {
+.flatpickr-weekday{
   color: #fefefe!important;
+}
+.flatpickr-day.prevMonthDay , .flatpickr-day.nextMonthDay {
+  color: #e6bfbf!important;
+
 }
 .flatpickr-day.selected {
   background: pink!important;
@@ -612,8 +626,8 @@ body{
   color: rgb(132 54 54);
   font-weight: 700;
 }
-.flatpickr-months .flatpickr-month {
-  background: #f9dcdc;
+.flatpickr-months .flatpickr-month{
+  background: #f3f3f3;
   color: rgb(132 54 54);
   fill: rgba(0,0,0,0.9);
   height: 45px;
@@ -629,4 +643,87 @@ body{
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+}
+
+/* style tags  */
+
+.filters .tags button {
+  min-width: 70px;
+}
+.filters .tags .tagHome, .tagFreetime {
+  display: inline-block;
+  padding: 5px;
+  border: none;
+  color: white;
+  margin: 5px;
+  border-radius: 10px;
+  background: rgb(176 81 81);
+  
+}
+.filters .tags .tagHome:hover, .tagFreetime:hover {
+  background: #c55959;
+  transition: 0.5s background;
+  cursor: pointer;
+}
+.filters .tags .tagWork, .done {
+    display: inline-block;
+    padding: 5px;
+    background: #9b5a35;
+    border: none;
+    color: white;
+    margin: 5px;
+    border-radius: 10px;
+    
+  
+}
+.filters .tags .tagWork:hover, .done:hover {
+  background: #723c1c;
+  transition: 0.5s background;
+  cursor: pointer;
+}
+.filters .tags .notdone, .all, .tagSchool {
+    display: inline-block;
+    padding: 5px;
+    background: rgb(121, 147, 81);
+    border: none;
+    color: white;
+    margin: 5px;
+    border-radius: 10px;
+}
+.filters .tags .notdone:hover, .all:hover, .tagSchool:hover {
+  background: rgb(66, 92, 24);
+  transition: 0.5s background;
+  cursor: pointer;
+}
+ /* style task modal  */
+ .task__modal--box input{
+
+ }
+ /* style profile  */
+.profile__modal .image {
+  width: 100%;
+}
+.profile__modal img{
+    overflow: hidden;
+    width: 100%;
+    height: auto;
+}
+.profile-tree {
+  text-align: center;
+  margin: 20px 0px;
+}
+.profile-tree input, .profile-tree input:focus{
+  background: #7c2828;
+  border: 1px solid rgb(254, 254, 254);
+  font-size: 20px;
+  text-align: center;
+  margin: 10px;
+  border-radius: 12px;
+  color: white;
+}
+.profile__modal .name{
+  color: rgb(110, 104, 104);
+}
+.nav__items--last{
+  display: none;
 }
